tests/typing/errors/mcil/repeated_init.mcil
(set-logic ALL)

(define-system S1
  :init true
  :init false 
)